Updated fixtures and added some unit tests for votes and links.  Also added an addition validation constraint on vote totals so that they cannot be anything but 1 or -1.

--- a/test/fixtures/links.yml
+++ b/test/fixtures/links.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  url: MyString
-  title: MyString
-  description: MyText
+google:
+  url: http://www.google.com/
+  title: Google
+  description: A search site.
 
-two:
-  url: MyString
-  title: MyString
-  description: MyText
+yahoo:
+  url: http://www.yahoo.com/
+  title: Yahoo
+  description: Another search site.
